--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@ h2 {
 	background-size: 100%;	
 	
 }
+.video {
+text-align: center;
+	background-image: url(img/footer.jpg);
+	background-size: 100%;		
+	
+}
 dl{
 	
 }
